--- a/.gitignore
+++ b/.gitignore
@@ -60,8 +60,8 @@ typings/
 # next.js build output
 .next
 
-*.a       # 忽略所有 .a 结尾的文件
-!lib.a    # 但 lib.a 除外
-/TODO     # 仅仅忽略项目根目录下的 TODO 文件，不包括 subdir/TODO
-build/    # 忽略 build/ 目录下的所有文件
-doc/*.txt # 会忽略 doc/notes.txt 但不包括 doc/server/arch.txt
+.idea/  # 代表.idea目录下的所有文件
+*.pyc  # 代表所有.pyc结尾的文件
+.idea/workspace.xml  # 添加单个文件路径
+.idea/misc.xml
+.idea/TextAnalysis.iml
